# Shiri

./: CMakeLists.txt  Master or Slave.md  Package.resolved  Package.swift  README.md  SETUP_INSTRUCTIONS.md  app.py  audio_mixer.py  cliraop-linux-aarch64.  config.py  config_store.py  log_streamer.py  owntone_api.py  plan.md  planstodo.md  run.sh  shiri_daemon.py  tts_pcm_ws.py  tts_webrtc.py  zone.py  zone_lifecycle.py  zone_manager.py
Shiri/: ContentView.swift  Info.plist  Shiri.entitlements  ShiriApp.swift
Shiri.xcodeproj/: project.pbxproj
Shiri.xcodeproj/xcuserdata/michel.xcuserdatad/xcschemes/: xcschememanagement.plist
Shiri/Managers/: AudioPipelineManager.swift  BridgeManager.swift  DockerManager.swift  NetworkManager.swift
Shiri/Models/: AirPlayDevice.swift  BridgeConfig.swift
Shiri/Services/: DockerAPI.swift  DockerModels.swift
Shiri/Views/: AddBridgeView.swift
ShiriTests/: ShiriTests.swift
ShiriUITests/: ShiriUITests.swift  ShiriUITestsLaunchTests.swift
install/: README.md  install.sh  requirements.txt
linux-app/: Makefile  README.md  go.mod
linux-app/cmd/shiri-linux/: main.go
linux-app/internal/config/: config.go
linux-app/internal/containers/: containers.go
linux-app/internal/encode/: ffmpeg.go
linux-app/internal/engine/: engine.go
linux-app/internal/fifo/: fifo.go
linux-app/internal/netifaces/: netifaces.go
linux-app/internal/netsetup/: macvlan.go
linux-app/internal/raopbin/: raopbin.go
linux-app/internal/rooms/: supervisor.go
linux-app/internal/runner/: runner.go
linux-app/internal/ssdp/: ssdp.go
linux-app/internal/stream/: broadcaster.go  httpstream.go
linux-app/internal/systemcheck/: systemcheck.go
linux-app/internal/upnp/: descparse.go  upnp.go
linux-app/packaging/: shiri-linux.service
multiroom-demo/: README.md  dual_zone_demo.sh  install_deps_ubuntu.sh  pause_bridge.sh  volume_bridge.sh
multiroom-demo/raspberrypi-bullseye-arm64/: owntone-dbgsym_29.0.138.gitbd5746c-1+bullseye_arm64.deb  owntone_29.0.138.gitbd5746c-1+bullseye.debian.tar.xz  owntone_29.0.138.gitbd5746c-1+bullseye.dsc  owntone_29.0.138.gitbd5746c-1+bullseye_arm64.buildinfo  owntone_29.0.138.gitbd5746c-1+bullseye_arm64.changes  owntone_29.0.138.gitbd5746c-1+bullseye_arm64.deb  owntone_29.0.138.gitbd5746c-1+bullseye_source.changes
scripts/: dhclient_namespace.sh  pause_bridge.sh  shiri_service.sh  volume_bridge.sh  zone_wrapper.sh
shiri-bridge/: CMakeLists.txt  Config.h  PipeReader.h  README.md  main.cpp
shiri-bridge/scripts/: airplay2_netns_demo.sh  ap2_netns_instance.sh  build_shairport.sh  netns_ap2_shell.sh
shiri-bridge/shiri-bridge/scripts/: build_shairport.sh
shiri-bridge/src/: AppState.h  Discovery.cpp  Discovery.h  Pairing.cpp  Pairing.h  RaopHostage.cpp  RaopHostage.h  Secrets.h  Shairport.cpp  Shairport.h  Tui.cpp  Tui.h  main.cpp
static/: app.js  index.html  style.css
static/js/: api.js  audio.js  main.js  utils.js
templates/: arecord_supervisor.sh  mixer_supervisor.sh  owntone.conf  reset_audio_pipe.sh  shairport_sync.conf
